macros/tests/trybuild/type.rs
use serde_args_macros::generate;

#[generate]
type Foo = usize;

fn main() {}
